--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-calendar": "~0.31.0",
     "apexcharts": "~3.37.1",
     "date-fns": "~2.29.3",
+    "firebase": "^10.14.1",
     "highlight.js": "~11.7.0",
     "luxon": "~3.2.1",
     "moment": "^2.29.4",
